--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Undangan Pernikahan Dewi & Hendro</title>
 
-    <meta property="og:title" content="Undangan Pernikahan Sherly & Daeng - Sabtu, 21 Maret 2020">
-    <meta property="og:description" content="Undangan Pernikahan Sherly & Daeng - Sabtu, 21 Maret 2020 di RM Pondok Kenanga, Jakasampurna Bekasi">
+    <meta property="og:title" content="Undangan Pernikahan Dewi & Hendro - Ahad, 03 Juli 2022">
+    <meta property="og:description" content="Undangan Pernikahan Dewi & Hendro - Ahad, 03 Juli 2022 di Jl. M. Saidi Gang Riin No. 19 RT. 004/006 Petukangan Selatan, Kec. Pesanggrahan, Jakarta Selatan, Jawa Barat">
     <meta property="og:locale" content="id_ID" />
-    <meta property="og:image" content="https://sherly.dae.ng/image/sherly-daeng-wedding-thumbnail.png">
-    <meta property="og:url" content="http://sherly.dae.ng/index.html">
+    <!-- <meta property="og:image" content="https://sherly.dae.ng/image/sherly-daeng-wedding-thumbnail.png"> -->
+    <meta property="og:url" content="https://dewi-hendro-menikah.github.io/">
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bulma Version 0.8.x-->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
