Menghapus meta thumbnail

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta property="og:title" content="Undangan Pernikahan Dewi & Hendro - Ahad, 03 Juli 2022">
     <meta property="og:description" content="Undangan Pernikahan Dewi & Hendro - Ahad, 03 Juli 2022 di Jl. M. Saidi Gang Riin No. 19 RT. 004/006 Petukangan Selatan, Kec. Pesanggrahan, Jakarta Selatan, Jawa Barat">
     <meta property="og:locale" content="id_ID" />
-    <!-- <meta property="og:image" content="https://sherly.dae.ng/image/sherly-daeng-wedding-thumbnail.png"> -->
     <meta property="og:url" content="https://dewi-hendro-menikah.github.io/">
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bulma Version 0.8.x-->
@@ -206,7 +205,7 @@
             <p class="putrake">
               Putra Keenam dari :
               <br>
-              Bapak Sumadi & Alm. Ibu Yuli Astuti
+              Bapak Sumadi & Ibu Yuli Astuti (Almh)
             </p>
           </div>
           <div class="column middle dengan">
@@ -218,7 +217,7 @@
             <p class="putrike">
               Putri Ke-? dari :
               <br>
-              Bapak ? dan Ibu ?
+              Bapak Sadelih (Alm) dan Ibu Rukiah (Almh)
             </p>
           </div>
         </div>
